<?xml version="1.0"?>
<package format="2">
  <name>ur_gazebo</name>
  <version>1.2.5</version>
  <description>
      Gazebo wrapper for the Universal UR5/10 robot arms.
  </description>


  <author>Alexander Bubeck</author>
  <author>Shaun Edwards</author>
  <author>Felix Messmer</author>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn</maintainer>
  <maintainer email="miguel.prada@tecnalia.com">Miguel Prada Sarasola</maintainer>
  <maintainer email="nhg@ipa.fhg.de">Nadia Hammoudeh Garcia</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/ur_gazebo</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <test_depend>roslaunch</test_depend>
  <depend>controller_manager</depend>
  <depend>effort_controllers</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_control</depend>
  <depend>joint_state_controller</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>position_controllers</depend>
  <depend>robot_state_publisher</depend>
  <!--<exec_depend>rostopic</exec_depend>-->
  <depend>ur_description</depend>
  <depend>ros_controllers</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
